--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "silverstripe/framework": "^4.10"
+        "php": "^8.1",
+        "silverstripe/framework": "^5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3.0",
-        "silverstripe/versioned": "^1"
+        "squizlabs/php_codesniffer": "^3.7.2",
+        "silverstripe/versioned": "^2"
     },
     "autoload": {
         "psr-4": {
@@ -32,5 +32,11 @@
     },
     "extra": [],
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "silverstripe/vendor-plugin": true
+        }
+    }
 }
